<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_login"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="605dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/josefi_bold"
                android:padding="15dp"
                android:text="MOMA"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="30dp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:padding="20dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="130dp"
                    android:background="@drawable/thubackground">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/josefi_bold"
                        android:padding="25dp"
                        android:text="@string/thu_rent"
                        android:textColor="@color/white"
                        android:textSize="30dp" />

                    <Button
                        android:id="@+id/home_incomeBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:background="#00000000"
                        android:padding="20dp"
                        android:text="@string/expand_all"
                        android:textColor="@color/white"
                        android:textSize="15dp" />

                </RelativeLayout>

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="-30dp"
                    android:src="@drawable/thu" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:layout_margin="20dp"
                android:background="@drawable/chibackground">

                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="20dp"
                    android:src="@drawable/chi" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:fontFamily="@font/josefi_bold"
                    android:padding="25dp"
                    android:text="@string/chi_rent"
                    android:textColor="@color/white"
                    android:textSize="30dp" />

                <Button
                    android:id="@+id/home_outcomeBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentBottom="true"
                    android:background="#00000000"
                    android:padding="20dp"
                    android:text="@string/expand_all"
                    android:textColor="@color/white"
                    android:textSize="15dp" />


            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="179dp"
                android:padding="20dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="130dp"
                    android:background="@drawable/thongkebackground">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/josefi_bold"
                        android:padding="25dp"
                        android:text="@string/thongke_rent"
                        android:textColor="@color/white"
                        android:textSize="27dp" />

                    <Button
                        android:id="@+id/home_thongkeBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:background="#00000000"
                        android:padding="20dp"
                        android:text="@string/expand_all"
                        android:textColor="@color/white"
                        android:textSize="15dp" />

                </RelativeLayout>

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="-30dp"
                    android:src="@drawable/thongke" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:layout_margin="20dp"
                android:background="@drawable/homebackround">

                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="20dp"
                    android:src="@drawable/canhan" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:fontFamily="@font/josefi_bold"
                    android:padding="25dp"
                    android:text="@string/canhan_rent"
                    android:textColor="@color/black"
                    android:textSize="30dp" />

                <Button
                    android:id="@+id/home_userBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentBottom="true"
                    android:background="#00000000"
                    android:padding="20dp"
                    android:text="@string/expand_all"
                    android:textColor="@color/black"
                    android:textSize="15dp" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_nav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="600dp"
        app:itemBackground="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:menu="@menu/menu_nav" />
</androidx.constraintlayout.widget.ConstraintLayout>